@@ -1,5 +1,6 @@
 Changelog for Articles.
 
+- [#6601] Fix template variables tab showing when creating a new article
 - [#6966] Fix issue with non-web contexts
 
 Articles 1.4.4
